# fiap_gs2

./: .gitignore  NEW_AGENTS_SUMMARY.md  README.md  firestore.rules
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
docs/: MVP-DELIVERY-SUMMARY.md  MVP_INTEGRATION_REPORT.md  QUICKSTART-FIREBASE-AUTH.md  firebase-auth-implementation-summary.md  roadmap-overview.md
packages_dashboard/: README.md
packages_dashboard/adaptive_assessment/: pubspec.yaml
packages_dashboard/approval_interface/: CHANGELOG.md  README.md  pubspec.yaml
packages_dashboard/approval_interface/example/: pubspec.yaml
packages_dashboard/dashboard_auth/example/: pubspec.yaml
packages_dashboard/research_dashboard/: README.md  VISUAL_GUIDE.md  pubspec.yaml
packages_dashboard/research_dashboard/example/: RUNNING_WITH_EMULATOR.md  pubspec.yaml
packages_dashboard/research_dashboard/lib/: research_dashboard.dart
packages_dashboard/research_dashboard/test/: research_dashboard_test.dart
packages_dashboard/tema/: CHANGELOG.md  README.md  pubspec.yaml  roadmap.md
packages_dashboard/tema/example/: README.md  pubspec.yaml
packages_dashboard/tema/lib/: tema.dart
packages_dashboard/tema/test/: tema_test.dart
production/: .gitignore  API_ENDPOINT_FIX.md  PR17_INTEGRATION_SUMMARY.md  README.md
production/backend/: .env.example  README.md  main.py  mock_approval_api.py  pyproject.toml  run_backend.sh
production/dashboard/: CONTENT_REVIEW_IMPLEMENTATION.md  README.md  WEB_SUPPORT.md  pubspec.yaml  run_dashboard.sh
production/dashboard/lib/: main.dart
(+114 files in other folders)
